# smarthack-2024

./: API.cpp  API.h  CMakeLists.txt  CSVParser.cpp  CSVParser.h  Engine.cpp  Engine.h  README.md  ResourceManager.cpp  ResourceManager.h  SQUAD CAL SMARTHACK.pptx  main.cpp  structs.h
cmake/: CompilerFlags.cmake  CopyHelper.cmake  Options.cmake
resources/: api_config.json  link.txt
